--- a/estudologia/app/views/web_pages/_form.html.erb
+++ b/estudologia/app/views/web_pages/_form.html.erb
@@ -12,26 +12,26 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %>
+    <%= f.label t('title') %>
     <%= f.text_field :title %>
   </div>
 
   <div class="field">
-    <%= f.label :description %>
+    <%= f.label t('description') %>
     <%= f.text_field :description %>
   </div>
 
   <div class="field">
-    <%= f.label :body %>
+    <%= f.label t('body') %>
     <%= f.text_field :body %>
   </div>
 
   <div class="field">
-    <%= f.label :author %>
+    <%= f.label t('author') %>
     <%= f.text_field :author %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('submit_web_page') %>
   </div>
 <% end %>
