--- a/estudologia/app/views/web_pages/new.html.erb
+++ b/estudologia/app/views/web_pages/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Web Page</h1>
+<h1><%= t 'new_web_page' %></h1>
 
 <%= render 'form', web_page: @web_page %>
 
-<%= link_to 'Back', web_pages_path %>
+<%= link_to t('back'), web_pages_path %>
