--- a/estudologia/app/views/web_pages/show.html.erb
+++ b/estudologia/app/views/web_pages/show.html.erb
@@ -1,24 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
+  <strong><%= t 'title' %>:</strong>
   <%= @web_page.title %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong><%= t 'description' %>:</strong>
   <%= @web_page.description %>
 </p>
 
 <p>
-  <strong>Body:</strong>
+  <strong><%= t 'body' %>:</strong>
   <%= @web_page.body %>
 </p>
 
 <p>
-  <strong>Author:</strong>
+  <strong><%= t 'author' %>:</strong>
   <%= @web_page.author %>
 </p>
 
-<%= link_to 'Edit', edit_web_page_path(@web_page) %> |
-<%= link_to 'Back', web_pages_path %>
+<%= link_to t('edit'), edit_web_page_path(@web_page) %> |
+<%= link_to t('back'), web_pages_path %>
