--- a/estudologia/app/views/web_pages/show.html.erb
+++ b/estudologia/app/views/web_pages/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<% cache @web_page do %>
 <p>
   <strong><%= t 'title' %>:</strong>
   <%= @web_page.title %>
@@ -19,6 +20,7 @@
   <strong><%= t 'author' %>:</strong>
   <%= @web_page.author %>
 </p>
+<% end %>
 
 <%= link_to t('edit'), edit_web_page_path(@web_page) %> |
 <%= link_to t('back'), web_pages_path %>
